--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.14.18",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.linux-x86_64": "2.0.6",
