--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 # Mac files
 .DS_Store
 Assets/Materials/WinZoneTransparent.mat
+Assets/Materials/WinZoneTransparent.mat
